# algorithmic-toolbox

./: .gitignore  CMakeLists.txt  README.md  fiblist.cpp  modern-cpp-programming-with-tdd
week3/assigment/solutions/: change_money.cpp  fract_knapsack.cpp  prize.cpp  salary.cpp  signatures.cpp  sum_prod.cpp
